src/main/resources/tests/Semantics/bad/characterValExpression3.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
   X : integer;
begin
    X := character'val(30); -- Error: type mismatch
end ExampleProcedure;
